Added form for adding new products and connected it to the database storage.